--- a/resources/assets/less/admin.less
+++ b/resources/assets/less/admin.less
@@ -329,3 +329,11 @@ hr {
   margin-bottom: 0;
   margin-top: 10px;
 }
+
+.control-label:first-child{
+  width:100%;
+}
+.space_number{
+  margin-bottom: 10px;
+  display: block;
+}
