--- a/resources/assets/less/admin.less
+++ b/resources/assets/less/admin.less
@@ -336,4 +336,27 @@ hr {
 .space_number{
   margin-bottom: 10px;
   display: block;
+  width: 25%;
+}
+
+.weekday_from,
+.weekday_to,
+.weekday_name{
+  display: inline-block;
+  width: 25%;
+}
+.weekday_from label,
+.weekday_to label{
+  width:auto !important;
+}
+.period_choices,
+.period_val{
+  display: inline-block;
+  width: 25%;
+}
+.period_choices label{
+  width:auto !important;
+}
+.period_val input{
+  width:100% !important;
 }
