--- a/resources/assets/less/admin.less
+++ b/resources/assets/less/admin.less
@@ -14,7 +14,7 @@
   color: #fff;
 };
 
-@auth_color: #3c8dbc;
+@auth_color: #ff8737;
 
 .bg-auth {
   background-color: @auth_color;
@@ -57,7 +57,7 @@
     background: none repeat scroll 0 0 @auth_color;
     border-radius: 4px 4px 0 0;
     box-shadow: 0 -3px 0 rgba(0, 0, 0, 0.2) inset;
-    color: #fff;
+    color: #6c6c6c;
     font-size: 26px;
     font-weight: 300;
     padding: 20px 10px;
@@ -359,4 +359,15 @@ hr {
 }
 .period_val input{
   width:100% !important;
+}
+#phone_number{
+  direction: ltr !important;
+  text-align: right;
+}
+
+/*show */
+
+.box-body .info{
+  list-style: none;
+  padding: 10px;
 }
