--- a/resources/assets/css/application.css
+++ b/resources/assets/css/application.css
@@ -42,6 +42,9 @@ body{
 .navbar-collapse{
 	border: none;
 }
+.navbar-collapse.in{
+	overflow: hidden !important;
+}
 .navbar-collapse.in .menu li{
 	margin: 0 5px 0 5px;
 	width: 100%;
@@ -100,7 +103,10 @@ body{
 }
 
 /*Reservation*/
-
+.picker__input{
+	direction: ltr;
+	text-align: right
+}
 /* Spaces */
 .spaces-list{
 	list-style: none;
@@ -163,6 +169,7 @@ body{
 	width: 300px;
 	float: right;
 	padding: 10px;
+	max-height: 250px;
 }
 .page .name{
 	float: right;
@@ -210,7 +217,10 @@ body{
 .more{
 	float: left;
 }
-
+.page .post-header{
+	float: right;
+	width: 100%;
+}
 /*reservations*/
 .reservations{
 	direction: rtl;
