--- a/resources/assets/css/application.css
+++ b/resources/assets/css/application.css
@@ -1,5 +1,5 @@
-@import url(http://fonts.googleapis.com/earlyaccess/droidarabicnaskh.css);
-@import url(http://fonts.googleapis.com/earlyaccess/droidarabickufi.css);
+@import url(https://fonts.googleapis.com/earlyaccess/droidarabicnaskh.css);
+@import url(https://fonts.googleapis.com/earlyaccess/droidarabickufi.css);
 body{
 	font-family: 'Droid Arabic Naskh', serif;
 	direction: rtl;
