--- a/resources/assets/css/application.css
+++ b/resources/assets/css/application.css
@@ -90,9 +90,24 @@ body{
 	border-radius: 3px;
 	color: #fff !important;
 }
+.menu li.dropdown a:focus, 
+.menu li.dropdown a:hover{
+	background: #ff8737 !important;
+	color: #fff !important;
+	border-radius: 3px;
+}
+.menu li.dropdown .dropdown-menu{
+	margin-top: -5px;
+	border-radius: 5px 0 5px 5px;
+	right: 10px;
+}
+.menu li.dropdown .dropdown-menu li{
+	float: right;
+	text-align: right;
+}
 .user .dropdown{
 	display: inline;
-	width: 180px;
+	width: 100%;
 }
 .user li{
 	float: right;
@@ -233,7 +248,10 @@ body{
 	float: left;
 	margin-top: 15px;
 }
-
+.page form{
+	width: 70%;
+	margin:auto;
+}
 .post-excerpt{
 	width: 100%;
 	float: right;
