--- a/resources/assets/css/application.css
+++ b/resources/assets/css/application.css
@@ -212,7 +212,7 @@ body{
 	font-size: 14px;
 }
 .page .logo{
-	width: 300px;
+	max-width: 300px;
 	float: right;
 	padding: 10px;
 	max-height: 250px;
