--- a/resources/assets/css/application.css
+++ b/resources/assets/css/application.css
@@ -171,8 +171,14 @@ body{
 	
 }
 .spaces-list li .space-icon{
-	max-height: 175px;
-	width: 100%;
+	height: 200px;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: center center;
+    -webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+    background-size: cover;
 }
 .spaces-list li .space-info{
 	list-style: none;
