--- a/resources/assets/less/admin.less
+++ b/resources/assets/less/admin.less
@@ -25,6 +25,10 @@
   }
 }
 
+.dataTables_wrapper .row{
+  overflow: scroll !important;
+}
+
 .bg-dark-blue-gradient{
   .gradient ('085988', '4f90a9');
 }
