--- a/resources/assets/css/application.css
+++ b/resources/assets/css/application.css
@@ -115,7 +115,8 @@ body{
 	float: right;
 	width: 100%;
 }
-.user .break{
+.user .break,
+.guest .break{
 	font-size: 20px;
     margin-top: 10px;
     float: right;
@@ -144,6 +145,10 @@ body{
 .user .dropdown .dropdown-menu li a{
 	font-size: 14px;
 }
+.guest li{
+	width: auto;
+	float: right;
+}	
 
 /*Reservation*/
 .picker__input{
