--- a/resources/assets/css/application.css
+++ b/resources/assets/css/application.css
@@ -166,7 +166,7 @@ body{
 	width: 20%;
 	margin: 0  0 20px 20px;
 	float: right;
-	min-height: 300px;
+	height: 390px;
 }
 .spaces-list li a{
 	text-decoration: none;
@@ -194,9 +194,8 @@ body{
 	font-size: 14px;
 	color: #000;
 	margin: 5px;
-	min-height: auto;
-	max-width: 100%;
-    min-width: 80%;
+	height: auto;
+	width: 100%;
 }
 .spaces-list li .space-info li i{
 	margin-left: 5px;
