--- a/resources/assets/css/application.css
+++ b/resources/assets/css/application.css
@@ -207,6 +207,9 @@ body{
 .spaces-list li .space-info li a{
 	color: #000;
 }
+.panel-group .panel-heading span{
+	margin-right: 5px;
+}
 /* space page */
 .page h3{
 	width: 100%;
@@ -327,4 +330,23 @@ body{
 	width: 50px;
 	height: 50px;
 	display: inline-block;
+}
+
+/*Filter*/
+.filter {
+	margin-bottom: 10px;
+}
+.filter .form-group {
+	margin-left: 30px;
+}
+.no-result {
+	color: #c5c5c5;
+    margin-top: 10%;
+}
+
+/*Pager */
+.pager {
+	width:100%;
+	display: inline-block;
+	padding: 0;
 }
