--- a/resources/assets/css/application.css
+++ b/resources/assets/css/application.css
@@ -371,7 +371,8 @@ body{
 
 /*Filter*/
 .filter {
-	margin-bottom: 10px;
+	margin-bottom: 15px;
+	float: right;
 }
 .filter .form-group {
 	margin-left: 30px;
