--- a/resources/assets/css/application.css
+++ b/resources/assets/css/application.css
@@ -247,6 +247,8 @@ body{
 	width: 59%;
 	margin-top: 15px;
 }
+
+
 /* space page */
 .page h3{
 	width: 100%;
@@ -387,4 +389,10 @@ body{
 	width:100%;
 	display: inline-block;
 	padding: 0;
+}
+
+
+/*Event page*/
+.sessions-list li{
+	height: auto;
 }
