add governorate to event filter

--- a/resources/assets/css/application.css
+++ b/resources/assets/css/application.css
@@ -374,7 +374,7 @@ body{
 /*Filter*/
 .filter {
 	margin-bottom: 15px;
-	float: right;
+	display: inline-block;
 }
 .filter .form-group {
 	margin-left: 30px;
