--- a/resources/assets/css/application.css
+++ b/resources/assets/css/application.css
@@ -192,14 +192,13 @@ body{
 .spaces-list li .space-info{
 	list-style: none;
 	padding: 5px 10px 0;
-	float: right;
-	display: inline-block;
+	display: inline;
 }
 .spaces-list li .space-info li,
 .spaces-list-small li .space-info li{
 	font-size: 14px;
 	color: #000;
-	margin: 5px;
+	margin: 5px 5px 0 0;
 	height: auto;
 	width: 100%;
 }
@@ -248,7 +247,12 @@ body{
 	margin-top: 15px;
 }
 
-
+.white-gredient {
+	background: -moz-linear-gradient(top,  rgba(255,255,255,0) 0%, rgba(255,255,255,1) 69%, rgba(255,255,255,1) 99%);
+	background: -webkit-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 69%,rgba(255,255,255,1) 99%);
+	background: linear-gradient(to bottom,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 69%,rgba(255,255,255,1) 99%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=0 );
+}
 /* space page */
 .page h3{
 	width: 100%;
